--- a/index.html
+++ b/index.html
@@ -319,11 +319,11 @@
      class="hidden md:block overflow-hidden transition-all duration-300 basis-full grow"
 >
    <div class="text-wordcolor font-medium flex flex-col md:flex-row md:items-center md:justify-end gap-2 md:gap-3 mt-3 md:mt-0 py-2 md:py-0 md:ps-7">
-        <a class="py-0.5 md:py-3 px-4 md:px-1 border-s-2 md:border-s-0 md:border-b-2 border-transparent text-wordcolor-500 hover:text-gray-800 focus:outline-hidden" href="#about">ABOUT</a>
-        <a class="py-0.5 md:py-3 px-4 md:px-1 border-s-2 md:border-s-0 md:border-b-2 border-transparent text-wordcolor-500 hover:text-gray-800 focus:outline-hidden" href="#portfolio">PORTFOLIO</a>
-          <a class="py-0.5 md:py-3 px-4 md:px-1 border-s-2 md:border-s-0 md:border-b-2 border-transparent text-wordcolor-500 hover:text-gray-800 focus:outline-hidden " href="#services">SERVICES</a>
-            <a class="py-0.5 md:py-3 px-4 md:px-1 border-s-2 md:border-s-0 md:border-b-2 border-transparent text-wordcolor-500 hover:text-gray-800 focus:outline-hidden" href="https://www.instagram.com/victoriathings" target="_blank">INSTAGRAM</a>
-              <a class="py-0.5 md:py-3 px-4 md:px-1 border-s-2 md:border-s-0 md:border-b-2 border-transparent text-wordcolor-500 hover:text-gray-800 focus:outline-hidden" href="#contact">CONTACT</a>
+        <a class="py-0.5 md:py-3 px-4 md:px-1 border-s-2 md:border-s-0 md:border-b-2 border-wordcolor text-wordcolor-500 hover:text-gray-800 focus:outline-hidden" href="#about">ABOUT</a>
+        <a class="py-0.5 md:py-3 px-4 md:px-1 border-s-2 md:border-s-0 md:border-b-2 border-wordcolor text-wordcolor-500 hover:text-gray-800 focus:outline-hidden" href="#portfolio">PORTFOLIO</a>
+          <a class="py-0.5 md:py-3 px-4 md:px-1 border-s-2 md:border-s-0 md:border-b-2 border-wordcolor text-wordcolor-500 hover:text-gray-800 focus:outline-hidden " href="#services">SERVICES</a>
+            <a class="py-0.5 md:py-3 px-4 md:px-1 border-s-2 md:border-s-0 md:border-b-2 border-wordcolor text-wordcolor-500 hover:text-gray-800 focus:outline-hidden" href="https://www.instagram.com/victoriathings" target="_blank">INSTAGRAM</a>
+              <a class="py-0.5 md:py-3 px-4 md:px-1 border-s-2 md:border-s-0 md:border-b-2 border-wordcolor text-wordcolor-500 hover:text-gray-800 focus:outline-hidden" href="#contact">CONTACT</a>
       </div>
     </div>
   </nav>
@@ -346,8 +346,17 @@
           <div class="lg:col-span-5 pb-2 group">
 <h1 class="text-5xl md:text-7xl font-bolder tracking-tight text-wordcolor leading-tight">
   <span class="block">Your Event,</span>
-  <span class="block pl-[4ch] md:pl-0">My Voice.</span>
+  <span class="block pl-[4ch] md:pl-0">
+    <span class="inline-flex items-center gap-2">
+      <span>My Voice.</span>
+      <!-- Mic icon -->
+ <img src="assets/microphone2.svg" alt="" aria-hidden="true"
+           width="72" height="72" class="inline-block align-middle opacity-90">
+ 
+    </span>
+  </span>
 </h1>
+
         <p class="mt-4 text-base md:text-lg tracking-widest text-wordcolor/80 font-medium">
   Victoria Tan — Professional Malaysia Emcee
 </p>
@@ -733,13 +742,13 @@
         <div class="relative rounded-2xl overflow-hidden ring-1 ring-zinc-200/60 shadow-xl bg-black">
           <div class="aspect-video">
             <button class="yt-lite w-full h-full" data-ytid="umMA7-xvtzo"
-                    aria-label="Play video: Hosting Highlights"></button>
+                    aria-label="Play video: BRIGHTRAY Data Center Grand Launch & Gala Dinner | Emcee Victoria Tan | Bilingual Hosting"></button>
           </div>
           <!-- soft glow -->
           <div class="pointer-events-none absolute -inset-px rounded-2xl bg-gradient-to-tr from-white/10 to-transparent"></div>
         </div>
         <p class="mt-3 text-sm text-zinc-600">
-          A short cut of Victoria’s emcee performances across protocol, corporate, and wedding stages.
+          BRIGHTRAY Data Center Grand Launch & Gala Dinner | Emcee Victoria Tan | Bilingual Hosting
         </p>
       </div>
 
@@ -749,22 +758,22 @@
           <div class="relative rounded-xl overflow-hidden ring-1 ring-zinc-200/60 shadow-md bg-black transition">
             <div class="aspect-video">
               <button class="yt-lite w-full h-full" data-ytid="gMbRJ-MBLVc"
-                      aria-label="Play video: Corporate Highlight"></button>
+                      aria-label="Play video: Taiwan Expo Smart Taipei AI Pavillion | Emcee Victoria Tan"></button>
             </div>
             <div class="pointer-events-none absolute inset-0 rounded-xl group-hover:ring-2 group-hover:ring-wordcolor/40 transition"></div>
           </div>
-          <p class="mt-2 text-xs text-zinc-600">Corporate highlight</p>
+          <p class="mt-2 text-xs text-zinc-600">Taiwan Expo Smart Taipei AI Pavillion</p>
         </div>
 
         <div class="group">
           <div class="relative rounded-xl overflow-hidden ring-1 ring-zinc-200/60 shadow-md bg-black transition">
             <div class="aspect-video">
               <button class="yt-lite w-full h-full" data-ytid="kdrErRUqXCU"
-                      aria-label="Play video: Wedding Highlight"></button>
+                      aria-label="Play video: Unilever Food Solutions | Future Menus Chef Showcase 2025 | Emcee Victoria Tan"></button>
             </div>
             <div class="pointer-events-none absolute inset-0 rounded-xl group-hover:ring-2 group-hover:ring-wordcolor/40 transition"></div>
           </div>
-          <p class="mt-2 text-xs text-zinc-600">Wedding highlight</p>
+          <p class="mt-2 text-xs text-zinc-600">Unilever Food Solutions | Future Menus Chef Showcase 2025 | Emcee Victoria Tan</p>
         </div>
       </div>
     </div>
@@ -939,27 +948,39 @@
               </div>
             </label>
 
-            <label class="block">
-              <span class="text-sm text-zinc-700">Event Type</span>
-              <div class="mt-1 relative">
-                <span class="pointer-events-none absolute inset-y-0 left-3 flex items-center">
-                  <!-- tag -->
-                  <svg class="w-4 h-4 text-zinc-400" viewBox="0 0 24 24" fill="none" stroke="currentColor">
-                    <path d="M20 12l-8 8-8-8 8-8 8 8z" stroke-width="1.8" stroke-linejoin="round"/>
-                    <circle cx="12" cy="12" r="2" stroke-width="1.8"/>
-                  </svg>
-                </span>
-                <select name="event_type"
-                        class="w-full border border-line bg-white rounded-lg pl-9 pr-8 py-2 focus:outline-none focus:ring-2 focus:ring-wordcolor/30">
-                  <option>Protocol / Formal Ceremony</option>
-                  <option>Corporate (Beauty)</option>
-                  <option>Corporate (Tech)</option>
-                  <option>Wedding</option>
-                  <option>Commercial / Media</option>
-                  <option>Other</option>
-                </select>
-              </div>
-            </label>
+<label class="block">
+  <span class="text-sm text-zinc-700">Event Type</span>
+
+  <div class="mt-1 relative">
+    <!-- left icon -->
+    <span class="pointer-events-none absolute inset-y-0 left-3 flex items-center">
+      <svg class="w-4 h-4 text-zinc-400" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+        <path d="M20 12l-8 8-8-8 8-8 8 8z" stroke-width="1.8" stroke-linejoin="round"/>
+        <circle cx="12" cy="12" r="2" stroke-width="1.8"/>
+      </svg>
+    </span>
+
+    <!-- select -->
+    <select name="event_type"
+      class="w-full appearance-none border border-line bg-white rounded-lg
+             pl-10 pr-10 py-2 h-10
+             focus:outline-none focus:ring-2 focus:ring-wordcolor/30">
+      <option>Protocol / Formal Ceremony</option>
+      <option>Corporate (Beauty)</option>
+      <option>Corporate (Tech)</option>
+      <option>Wedding</option>
+      <option>Commercial / Media</option>
+      <option>Other</option>
+    </select>
+
+    <!-- right chevron (since we removed native arrow) -->
+    <span class="pointer-events-none absolute inset-y-0 right-3 flex items-center">
+      <svg class="w-4 h-4 text-zinc-400" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+        <path d="M6 9l6 6 6-6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+      </svg>
+    </span>
+  </div>
+</label>
           </div>
 
           <label class="block">
