--- a/index.html
+++ b/index.html
@@ -657,6 +657,10 @@
         <img src="assets/logos/28.svg" alt="Brand 28" class="h-20 md:h-32 w-auto opacity-80 flex-shrink-0"  loading="lazy" decoding="async" />
         <img src="assets/logos/29.svg" alt="Brand 29" class="h-20 md:h-32 w-auto opacity-80 flex-shrink-0"  loading="lazy" decoding="async" />
         <img src="assets/logos/30.svg" alt="Brand 30" class="h-20 md:h-32 w-auto opacity-80 flex-shrink-0"  loading="lazy" decoding="async" />
+         <img src="assets/logos/31.svg"alt="Brand 27" class="h-20 md:h-32 w-auto opacity-80 flex-shrink-0"  loading="lazy" decoding="async" />
+        <img src="assets/logos/32.svg" alt="Brand 28" class="h-20 md:h-32 w-auto opacity-80 flex-shrink-0"  loading="lazy" decoding="async" />
+        <img src="assets/logos/33.svg" alt="Brand 29" class="h-20 md:h-32 w-auto opacity-80 flex-shrink-0"  loading="lazy" decoding="async" />
+        <img src="assets/logos/34.svg" alt="Brand 30" class="h-20 md:h-32 w-auto opacity-80 flex-shrink-0"  loading="lazy" decoding="async" />
         <!-- duplicate logos for seamless loop -->
        <img src="assets/logos/1.svg" alt="Brand 1" class="h-20 md:h-32 w-auto opacity-80 flex-shrink-0"  loading="lazy" decoding="async" />
         <img src="assets/logos/2.svg" alt="Brand 2" class="h-20 md:h-32 w-auto opacity-80 flex-shrink-0"  loading="lazy" decoding="async" />
@@ -688,6 +692,11 @@
         <img src="assets/logos/28.svg" alt="Brand 28" class="h-20 md:h-32 w-auto opacity-80 flex-shrink-0"  loading="lazy" decoding="async" />
         <img src="assets/logos/29.svg" alt="Brand 29" class="h-20 md:h-32 w-auto opacity-80 flex-shrink-0"  loading="lazy" decoding="async" />
         <img src="assets/logos/30.svg" alt="Brand 30" class="h-20 md:h-32 w-auto opacity-80 flex-shrink-0"  loading="lazy" decoding="async" />
+            <img src="assets/logos/31.svg"alt="Brand 27" class="h-20 md:h-32 w-auto opacity-80 flex-shrink-0"  loading="lazy" decoding="async" />
+        <img src="assets/logos/32.svg" alt="Brand 28" class="h-20 md:h-32 w-auto opacity-80 flex-shrink-0"  loading="lazy" decoding="async" />
+        <img src="assets/logos/33.svg" alt="Brand 29" class="h-20 md:h-32 w-auto opacity-80 flex-shrink-0"  loading="lazy" decoding="async" />
+        <img src="assets/logos/34.svg" alt="Brand 30" class="h-20 md:h-32 w-auto opacity-80 flex-shrink-0"  loading="lazy" decoding="async" />
+
       </div>
     </div>
   </div>
